--- a/gradle_demo/app/build.gradle
+++ b/gradle_demo/app/build.gradle
@@ -30,6 +30,10 @@ dependencies {
    implementation group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.8.0'
    implementation group: 'org.apache.spark', name: 'spark-streaming-kafka-0-10_2.12', version: '3.1.2'
    compileOnly group: 'org.apache.spark', name: 'spark-streaming_2.12', version: '3.1.1'
+    implementation 'com.google.guava:guava:30.0-jre'
+	compileOnly group: 'org.apache.spark', name: 'spark-mllib_2.12', version: '3.1.1'
+	compileOnly group: 'org.apache.spark', name: 'spark-sql_2.12', version: '3.1.1'
+	implementation group: 'org.apache.spark', name: 'spark-core_2.12', version: '3.1.1'
 }
 
 application {
