--- a/gradle_demo/app/build.gradle
+++ b/gradle_demo/app/build.gradle
@@ -21,7 +21,7 @@ repositories {
 
 dependencies {
     // Use Scala 2.13 in our library project
-   implementation group: 'org.scala-lang', name: 'scala-library', version: '2.12.14'
+   implementation group: 'org.scala-lang', name: 'scala-library', version: '2.12.3'
    implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '2.8.0'
    
    implementation group: 'org.apache.spark', name: 'spark-core_2.12', version: '3.1.1'
@@ -30,6 +30,11 @@ dependencies {
    implementation group: 'org.apache.kafka', name: 'kafka_2.12', version: '2.8.0'
    implementation group: 'org.apache.spark', name: 'spark-streaming-kafka-0-10_2.12', version: '3.1.2'
    compileOnly group: 'org.apache.spark', name: 'spark-streaming_2.12', version: '3.1.1'
+   // https://mvnrepository.com/artifact/org.apache.kafka/kafka-streams-scala
+   implementation group: 'org.apache.kafka', name: 'kafka-streams-scala_2.12', version: '2.8.0'
+   // https://mvnrepository.com/artifact/org.apache.spark/spark-sql-kafka-0-10
+   testImplementation group: 'org.apache.spark', name: 'spark-sql-kafka-0-10_2.12', version: '3.1.1'
+   implementation group: 'org.apache.kafka', name: 'kafka-streams', version: '2.8.0'
 }
 
 application {
